--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
   width: 1000px;
   height: 550px;
   margin: 20px auto;
-  background: #ff0000;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(bgImg.jpg);
 }
 #calculator {
   width: 320px;
